# rhombus-type-inference

./: .dockerignore  .gitignore  README.md  dev.Dockerfile  docker-compose.demo.yml  docker-compose.dev.yml  pnpm-lock.yaml  turbo.json
apps/backend/: Dockerfile  README.md  dev.Dockerfile  manage.py  package.json  pyproject.toml
apps/backend/app/: settings.py  test_settings.py  urls.py
apps/backend/assets/: not_a_valid_file.csv  sample_data.csv  test_1.csv  test_10.csv  test_11.csv  test_12.csv  test_13.csv  test_14.csv  test_15.csv  test_2.csv  test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv  test_9.csv
apps/backend/config/: __init__.py
apps/backend/infer_sessions/: apps.py  callbacks.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/backend/infer_sessions/handlers/: __init__.py  generate_url_state_handler.py  handler.py  init_state_handler.py
apps/backend/infer_sessions/migrations/: 0001_initial.py  0002_limit_state_to_allowed_values.py
apps/backend/inferstate/: __init__.py  callbacks_manager.py  loader.py  state_machine.py  tests.py
apps/backend/scripts/: entrypoint.sh  run_dev_server.sh  run_prod_server.sh  run_workers.sh  run_workers_dev.sh
apps/backend/storage/: __init__.py  aws_adapter.py  minio_adapter.py  storage.py
apps/backend/type_inference/: infer.py  tasks.py  utils.py
apps/backend/type_inference/file_handler/: __init__.py  base.py  csv_handler.py  excel_handler.py
apps/backend/typeinfer/: asgi.py  settings.py  urls.py  wsgi.py
apps/backend/webhook/: urls.py  views.py
apps/backend/workers/: celeryconfig.py  file_validate.py  infer_data_types.py  persist_infer_results.py  test_file_validate.py  test_infer_data_types.py  worker_app.py
configs/: .pg_service.conf  (+5 more)
(+42 files in other folders)
