[tool.poetry]
name = "backend"
version = "0.1.0"
description = "infer type of csv and excel files"
authors = ["ducduyn31 <ducduy.ababat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
pandas = "^2.2.1"
python-magic = "^0.4.27"
psycopg = "^3.1.18"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
